logs/cir-cuda/SYR2K_syr2k.hip.cpp.cir.log
COMMAND: /workspace/llvm-bin/clang-23 -fclangir --gcc-install-dir=/usr/lib/gcc/x86_64-linux-gnu/11 -x hip --hip-path=/opt/rocm-6.3.0 --offload-arch=gfx942 -D__AMDGCN_WAVEFRONT_SIZE=64 -I/root/polybenchGpu/CUDA/SYR2K -std=c++17 -O0 -c /root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp -I/root/polybenchGpu/HIP -I/root/polybenchGpu/HIP/SYR2K -o /tmp/SYR2K_syr2k.hip.cpp.cir.o

/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:123:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  123 |         hipGetDeviceProperties(&deviceProp, GPU_DEVICE);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.3.0/include/hip/hip_runtime_api.h:91:32: note: expanded from macro 'hipGetDeviceProperties'
   91 | #define hipGetDeviceProperties hipGetDevicePropertiesR0600
      |                                ^
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:125:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  125 |         hipSetDevice( GPU_DEVICE );
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:154:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  154 |         hipMalloc((void **)&A_gpu, sizeof(DATA_TYPE) * NI * NJ);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:155:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  155 |         hipMalloc((void **)&B_gpu, sizeof(DATA_TYPE) * NI * NJ);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:156:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  156 |         hipMalloc((void **)&C_gpu, sizeof(DATA_TYPE) * NI * NI);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:157:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  157 |         hipMemcpy(A_gpu, A, sizeof(DATA_TYPE) * NI * NJ, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:158:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  158 |         hipMemcpy(B_gpu, B, sizeof(DATA_TYPE) * NI * NJ, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:159:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  159 |         hipMemcpy(C_gpu, C, sizeof(DATA_TYPE) * NI * NI, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:168:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  168 |         hipDeviceSynchronize();
      |         ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:175:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  175 |         hipMemcpy(C_outputFromGpu, C_gpu, sizeof(DATA_TYPE) * NI * NI, hipMemcpyDeviceToHost);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:177:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  177 |         hipFree(A_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:178:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  178 |         hipFree(B_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/SYR2K/syr2k.hip.cpp:179:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  179 |         hipFree(C_gpu);
      |         ^~~~~~~~~~~~~~
loc("/opt/rocm-6.3.0/include/hip/amd_detail/hip_assert.h":70:3): error: 'cir.cast' op result type address space does not match the address space of the operand
fatal error: CIR module verification error before running CIR-to-CIR passes
clang-23: error: clang frontend command failed with exit code 70 (use -v to see invocation)
clang version 23.0.0git (git@github.com:llvm/llvm-project.git f30c3bb2647d4385c9d2035b9a661ecc0bcca813)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /workspace/llvm-bin
Build config: +assertions
clang-23: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang-23: note: diagnostic msg: /tmp/syr2k-gfx942-e95623.hip
clang-23: note: diagnostic msg: /tmp/syr2k-7eaf54.hip
clang-23: note: diagnostic msg: /tmp/syr2k-gfx942-e95623.sh
clang-23: note: diagnostic msg: 

********************
